--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-  provider: ^6.0.0
-  flutter_svg: ^0.23.0+1
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  http: ^0.13.4
+  provider: ^6.0.0
+  flutter_svg: ^0.23.0+1
 
 dev_dependencies:
   flutter_test:
